--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ altair = "^4.1.0"
 streamlit = "^0.60.0"
 
 [tool.poetry.dev-dependencies]
+ipython = "^7.15.0"
+black = "^19.10b0"
+mypy = "^0.780"
+isort = "^4.3.21"
+autopep8 = "^1.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
