--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,78 @@
-poetry
+altair==4.1.0
+appnope==0.1.0; sys_platform == "darwin" or platform_system == "Darwin" or python_version >= "3.3" and sys_platform == "darwin" or python_version >= "3.4" and sys_platform == "darwin" or python_version >= "3.4" and platform_system == "Darwin"
+astor==0.8.1
+attrs==19.3.0
+backcall==0.2.0
+base58==2.0.1
+bleach==3.1.5
+blinker==1.4
+boto3==1.14.2
+botocore==1.17.2
+cachetools==4.1.0
+certifi==2020.4.5.2
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3; python_version >= "3.3" and sys_platform == "win32" or sys_platform == "win32" or python_version >= "3.4" and sys_platform == "win32"
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.15.2
+entrypoints==0.3
+enum-compat==0.0.3
+idna==2.9
+importlib-metadata==1.6.1; python_version < "3.8"
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.0
+jinja2==2.11.2
+jmespath==0.10.0
+jsonschema==3.2.0
+jupyter-client==6.1.3
+jupyter-core==4.6.3
+markupsafe==1.1.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.0.3
+numpy==1.18.5
+packaging==20.4
+pandas==1.0.4
+pandocfilters==1.4.2
+parso==0.7.0
+pathtools==0.1.2
+pexpect==4.8.0; python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32" or python_version >= "3.4" and sys_platform != "win32"
+pickleshare==0.7.5
+pillow==7.1.2
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.12.2
+ptyprocess==0.6.0; python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32" or python_version >= "3.4" and sys_platform != "win32" or os_name != "nt" or python_version >= "3.3" and sys_platform != "win32" and (python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32" or python_version >= "3.4" and sys_platform != "win32") or python_version >= "3.4" and sys_platform != "win32" and (python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32" or python_version >= "3.4" and sys_platform != "win32")
+pydeck==0.4.0b2
+pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32==228; python_version >= "3.4" and sys_platform == "win32" or sys_platform == "win32"
+pywinpty==0.5.7; os_name == "nt"
+pyzmq==19.0.1
+requests==2.23.0
+s3transfer==0.3.3
+send2trash==1.5.0
+six==1.15.0
+streamlit==0.60.0
+terminado==0.8.3
+testpath==0.4.4
+toml==0.10.1
+toolz==0.10.0
+tornado==5.1.1
+traitlets==4.3.3
+tzlocal==2.1
+urllib3==1.25.9
+validators==0.15.0
+watchdog==0.10.2
+wcwidth==0.2.4
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==3.1.0; python_version < "3.8"
