--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,28 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-executables-have-shebangs
-    -   id: check-toml
-    -   id: end-of-file-fixer
-    -   id: mixed-line-ending
-    -   id: pretty-format-json
+      - id: check-executables-have-shebangs
+      - id: check-toml
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: pretty-format-json
         args: ["--autofix", "--indent=4"]
-    -   id: requirements-txt-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: requirements-txt-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.761
     hooks:
-    -   id: mypy
--   repo: https://github.com/pre-commit/mirrors-autopep8
+      - id: mypy
+  - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v1.5
     hooks:
-    -   id: autopep8
--   repo: https://github.com/pre-commit/mirrors-isort
+      - id: autopep8
+  - repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
     hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
-    rev: stable
+      - id: isort
+  - repo: https://github.com/psf/black
+    rev: v22.6.0
     hooks:
-    -   id: black
+      - id: black
