--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,101 @@
-altair==4.1.0
-appnope==0.1.0; python_version >= "3.4" and sys_platform == "darwin" or python_version >= "3.4" and platform_system == "Darwin" or python_version >= "3.3" and sys_platform == "darwin" or sys_platform == "darwin"
-astor==0.8.1
-attrs==19.3.0
-backcall==0.2.0
-base58==2.0.1
-bleach==3.1.5
-blinker==1.4
-boto3==1.14.11
-botocore==1.17.11
-cachetools==4.1.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3; python_version >= "3.4" and sys_platform == "win32" or python_version >= "3.3" and sys_platform == "win32" or sys_platform == "win32"
-decorator==4.4.2
-defusedxml==0.6.0
-docutils==0.15.2
-entrypoints==0.3
-enum-compat==0.0.3
-idna==2.9
-importlib-metadata==1.6.1; python_version < "3.8"
-ipykernel==5.3.0
-ipython==7.15.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.1
-jinja2==2.11.2
-jmespath==0.10.0
-jsonschema==3.2.0
-jupyter-client==6.1.3
-jupyter-core==4.6.3
-markupsafe==1.1.1
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.4.12
-numpy==1.21.0
-packaging==20.4
-pandas==1.0.5
-pandocfilters==1.4.2
-parso==0.7.0
-pathtools==0.1.2
-pexpect==4.8.0; python_version >= "3.4" and sys_platform != "win32" or python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32"
-pickleshare==0.7.5
-pillow==9.0.1
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.15.0
-ptyprocess==0.6.0; python_version >= "3.4" and sys_platform != "win32" or os_name != "nt" or python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32"
-pydeck==0.4.0b2
-pygments==2.6.1
-pyparsing==2.4.7
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-pytz==2020.1
-pywin32==228; python_version >= "3.4" and sys_platform == "win32"
-pywinpty==0.5.7; os_name == "nt"
-pyzmq==19.0.1
-requests==2.24.0
-s3transfer==0.3.3
-send2trash==1.5.0
-six==1.15.0
-streamlit==0.62.0
-terminado==0.8.3
-testpath==0.4.4
-toml==0.10.1
-toolz==0.10.0
-tornado==6.0.4
-traitlets==4.3.3
-tzlocal==2.1
-urllib3==1.25.9
-validators==0.15.0
-watchdog==0.10.3
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.1.0; python_version < "3.8"
+altair==4.2.0; python_version >= "3.7"
+appnope==0.1.3; sys_platform == "darwin" and python_version >= "3.8" and platform_system == "Darwin"
+argon2-cffi-bindings==21.2.0; python_version >= "3.7"
+argon2-cffi==21.3.0; python_version >= "3.7"
+asttokens==2.0.5; python_version >= "3.8"
+attrs==22.1.0; python_version >= "3.7"
+backcall==0.2.0; python_version >= "3.8"
+backports.zoneinfo==0.2.1; python_version < "3.9" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
+beautifulsoup4==4.11.1; python_full_version >= "3.6.0" and python_version >= "3.7"
+bleach==5.0.1; python_version >= "3.7"
+blinker==1.5; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+cachetools==5.2.0; python_version >= "3.7" and python_version < "4.0"
+certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
+cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7"
+charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
+click==8.1.3; python_version >= "3.7"
+colorama==0.4.5; python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0" and platform_system == "Windows"
+commonmark==0.9.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.7"
+debugpy==1.6.2; python_version >= "3.7"
+decorator==5.1.1; python_version >= "3.8"
+defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+entrypoints==0.4; python_version >= "3.7"
+executing==0.9.1; python_version >= "3.8"
+fastjsonschema==2.16.1; python_version >= "3.7"
+gitdb==4.0.9; python_version >= "3.7"
+gitpython==3.1.27; python_version >= "3.7"
+idna==3.3; python_version >= "3.7" and python_version < "4"
+importlib-metadata==4.12.0; python_version >= "3.7"
+importlib-resources==5.9.0; python_version < "3.9" and python_version >= "3.7"
+ipykernel==6.15.1; python_version >= "3.7"
+ipython-genutils==0.2.0; python_version >= "3.7"
+ipython==8.4.0; python_version >= "3.8"
+ipywidgets==7.7.1; python_version >= "3.7"
+jedi==0.18.1; python_version >= "3.8"
+jinja2==3.1.2; python_version >= "3.7"
+jsonschema==4.8.0; python_version >= "3.7"
+jupyter-client==7.3.4; python_full_version >= "3.7.0" and python_version >= "3.7"
+jupyter-core==4.11.1; python_version >= "3.7"
+jupyterlab-pygments==0.2.2; python_version >= "3.7"
+jupyterlab-widgets==1.1.1; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
+matplotlib-inline==0.1.3; python_version >= "3.8"
+mistune==0.8.4; python_version >= "3.7"
+nbclient==0.6.6; python_full_version >= "3.7.0" and python_version >= "3.7"
+nbconvert==6.5.0; python_version >= "3.7"
+nbformat==5.4.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+nest-asyncio==1.5.5; python_full_version >= "3.7.0" and python_version >= "3.7"
+notebook==6.4.12; python_version >= "3.7"
+numpy==1.23.1
+packaging==21.3; python_version >= "3.7"
+pandas==1.4.3; python_version >= "3.8"
+pandocfilters==1.5.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+parso==0.8.3; python_version >= "3.8"
+pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
+pickleshare==0.7.5; python_version >= "3.8"
+pillow==9.2.0; python_version >= "3.7"
+prometheus-client==0.14.1; python_version >= "3.7"
+prompt-toolkit==3.0.30; python_full_version >= "3.6.2" and python_version >= "3.8"
+protobuf==3.20.1; python_version >= "3.7"
+psutil==5.9.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8" and os_name != "nt"
+pure-eval==0.2.2; python_version >= "3.8"
+py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.5.0"
+pyarrow==8.0.0; python_version >= "3.7"
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.4.0"
+pydeck==0.7.1; python_version >= "3.7"
+pygments==2.12.0; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.8"
+pympler==1.0.1; python_version >= "3.7"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
+pyrsistent==0.18.1; python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+pytz-deprecation-shim==0.1.0.post0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+pytz==2022.1; python_version >= "3.8"
+pywin32==304; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
+pywinpty==2.0.6; os_name == "nt" and python_version >= "3.7"
+pyzmq==23.2.0; python_version >= "3.7"
+requests==2.28.1; python_version >= "3.7" and python_version < "4"
+rich==12.5.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.7"
+semver==2.13.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+send2trash==1.8.0; python_version >= "3.7"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+smmap==5.0.0; python_version >= "3.7"
+soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
+stack-data==0.3.0; python_version >= "3.8"
+streamlit==1.11.1; python_version >= "3.7"
+terminado==0.15.0; python_version >= "3.7"
+tinycss2==1.1.1; python_version >= "3.7"
+toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+toolz==0.12.0; python_version >= "3.7"
+tornado==6.2; python_version >= "3.7"
+traitlets==5.3.0; python_full_version >= "3.7.0" and python_version >= "3.8"
+typing-extensions==4.3.0; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "3.9"
+tzdata==2022.1; platform_system == "Windows" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
+tzlocal==4.2; python_version >= "3.7"
+urllib3==1.26.11; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+validators==0.20.0; python_version >= "3.7"
+watchdog==2.1.9; platform_system != "Darwin" and python_version >= "3.7"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
+webencodings==0.5.1; python_version >= "3.7"
+widgetsnbextension==3.6.1; python_version >= "3.7"
+zipp==3.8.1; python_version < "3.9" and python_version >= "3.7"
