--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = ""
 authors = ["Setu Shah <setu+covid-movement@setu.me>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.9"
 pandas = "^1.4.3"
 altair = "^4.2.0"
-streamlit = "^1.1.1"
+streamlit = "^1.12.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.4.0"
