--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Setu Shah <setu+covid-movement@setu.me>"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9.16"
 pandas = "^1.4.3"
 altair = "^4.2.0"
 streamlit = "^1.12.2"
